[package]
name = "eth-keystore"
version = "0.5.0"
authors = ["Rohit Narurkar <rohit.narurkar@protonmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A minimalist library to interact with encrypted JSON keystores"
documentation = "https://docs.rs/eth-keystore"
repository = "https://github.com/roynalnaruto/eth-keystore-rs"
readme = "README.md"
keywords = ["ethereum", "web3", "wallet"]
exclude = ["tests/test-keys/*"]

[dependencies]
aes = "0.8.0"
ctr = "0.9.0"
digest = "0.10.0"
hex = "0.4.2"
hmac = "0.12.0"
pbkdf2 = { version = "0.11", default-features = false }
rand = "0.8.4"
scrypt = { version = "0.10.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.1"
sha3 = "0.10.0"
thiserror = { version = "1.0.22", default-features = false }
uuid = { version = "0.8", features = ["serde", "v4"] }

# feature = "geth-compat"
ethereum-types = { version = "0.13.1", optional = true }
k256 = { version = "0.11.0", optional = true }

[features]
geth-compat = ["ethereum-types", "k256", "k256/ecdsa"]
